# sqlalchemy-rds-iam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sqlalchemy_rds_iam/: __init__.py  auth.py
tests/: conftest.py  test_auth.py
