[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sqlalchemy-rds-iam"
version = "0.1.0"
description = "SQLAlchemy extension for AWS RDS IAM authentication"
readme = "README.md"
license = "MIT"
keywords = ["sqlalchemy", "aws", "rds", "iam", "authentication"]
authors = ["Joshua Shanks <jjshanks@gmail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "sqlalchemy_rds_iam", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = ">=2.0.0"
boto3 = ">=1.26.0"
typing-extensions = ">=4.0.0"
cachetools = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
# Start of Selection
boto3-stubs = {extras = ["essential"], version = ">=1.26.0"}
types-cachetools = ">=5.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
ruff = ">=0.0.290"
psycopg2-binary = ">=2.9.0"
pre-commit = ">=3.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=2.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/jjshanks/sqlalchemy-rds-iam"
Documentation = "https://sqlalchemy-rds-iam.readthedocs.io"
Repository = "https://github.com/jjshanks/sqlalchemy-rds-iam.git"
Issues = "https://github.com/jjshanks/sqlalchemy-rds-iam/issues"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["venv/"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
